--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="script.js"></script>
 </head>
 <body>
-    
+    <div class = "header">Header</div>
+    <div class = "sidebar">sidebar</div>
+    <div class = "main">main</div>
 </body>
 </html>
